Separate min/max spinners to the new component